@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.5.0
 
+  *) Cygwin build fixes.  PRs 51016 and 55586.  [Carlo Bramini
+     <carlo.bramix libero.it>] 
+
   *) Add apr_skiplist family. [Jim Jagielski]
 
   *) Add experimental cmake-based build system for Windows.  Refer to 
